--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-system-navigation-bar": "^2.6.4",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
-    "zustand": "^5.0.0-rc.2"
+    "zustand": "^5.0.0-rc.2",
+    "expo-navigation-bar": "~3.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
