--- a/app.json
+++ b/app.json
@@ -1,10 +1,8 @@
 {
   "expo": {
-    "name": "my-app",
-    "slug": "my-app",
-    "assets": [
-      "./assets/images/"
-    ],
+    "name": "Wallpasta",
+    "slug": "wallpasta",
+    "assets": ["./assets/images/"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -30,9 +28,7 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": [
-      "expo-router"
-    ],
+    "plugins": ["expo-router"],
     "experiments": {
       "typedRoutes": true
     },
