--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-UNSPLASH_ACCESS_KEY=W_LT7E9EzrQoUI7BOxD6MLfScYjM5VlFKmrZ5kLR7n0
-UNSPLASH_SECRET_KEY=iPwLZ_L2gbDj0LNyAi4O6WRy33QOJdgYq7BbrPnmzjs
+UNSPLASH_ACCESS_KEY=Hk1HX2kGi_N6HvpoftLF6D_NoCqSkZBjEjmUc3pMlJ0
+UNSPLASH_SECRET_KEY="PnDbC5p4MmQWq-g45xtqSOxl3YGJcI9PZfB02Xr5NK4"
